--- a/firmware/main/CMakeLists.txt
+++ b/firmware/main/CMakeLists.txt
@@ -1,6 +1,7 @@
 idf_component_register(SRCS
     "main.c"
     "tcp_server.c"
+    "config.c"
     "connect.c"
     "connection_dup.c"
     "command.c"
